2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/gui.stetic: Updated.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanel.cs, CSharpBindingCompilerManager.cs,
	  Project/CSharpCompilerParameters.cs: Implemented support for
	  CodePage and Win32Icon options.
	* CSharpBinding.mdp, Makefile.am: Updated.
	* gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/generated.cs, gtk-gui/gui.stetic: Implement the options
	  panel using stetic.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs, CSharpBinding.addin.xml: Created
	  new text editor extension to properly support code completion.
	* CSharpBinding.mdp, Makefile.am: Updated.
	* Parser/CSharpVisitor.cs, Parser/TypeVisitor.cs,
	  Parser/LanguageItemVisitor.cs,
	  Parser/SharpDevelopTree/Destructor.cs,
	  Parser/SharpDevelopTree/Method.cs,
	  Parser/SharpDevelopTree/ReturnType.cs,
	  Parser/SharpDevelopTree/Constructor.cs: Track api changes.
	* Parser/Resolver.cs: Track api changes. Properly resolve instantiated
	  generic types.
	* CSharpAmbience.cs: Properly show generic type names.

2007-01-24  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/LanguageItemVisitor.cs: Properly resolve method overloads.
	  Fixes bug #77418.

2007-01-24  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp: Removed old dependency.
	* Parser/TypeVisitor.cs, Parser/SharpDevelopTree/ReturnType.cs: Take
	  into account that the parser returns array dimensions starting at
	  0, not at 1.  Fixed some issues when resolving indexer types. Fixes
	  bug #79382.
	* Parser/LanguageItemVisitor.cs: When visiting an indexer, if there is
	  no indexer (it can be an array access), return the target type.
	* templates/GtkSharp2Project.xpt.xml: Fix template.

2007-01-15  Lluis Sanchez Gual <lluis@novell.com> 

	* templates/GtkSharp2Project.xpt.xml: Use the new partial class model.
